2006-01-09  Moriyoshi Koizumi  <moriyoshi@users.sourceforge.net>

	* pam_mysql.c: PR #1325395 - add "disconnect_every_op" option that forces
	pam_mysql to disconnect from the database every operation.
	(pam_sm_chauthtok): PR #1338667 - stop using getuid() and use geteuid()
	instead. PR #1338672 - allow root to change the passwords of other users
	without their old password.
	* acinclude.m4: check PAM_AUTHTOK_RECOVERY_ERR availability, for
	Linux PAM's error.
	* README: note about disconnect_every_op.

2005-09-23  Moriyoshi Koizumi  <moriyoshi@users.sourceforge.net>

	* pam_mysql.c: (pam_mysql_parse_args): change option parsing behaviour
	so "=" following each option name is not needed.
	(pam_sm_authenticate): fix try_first_pass behaviour. fix behaviour so that
	the password obtained in a conversation is always stored with
	pam_set_item().

2005-09-21  Moriyoshi Koizumi  <moriyoshi@users.sourceforge.net>

	* pam_mysql.c: add "logrhostcolumn" option.
	#define PAM_SM_* so that pam_mysql.c can be linked statically to libpam.
	static'ify some functions.  s/pam_permit_modstruct/pam_mysql_modstruct/.
	(pam_mysql_stream_skip_spn): fix invalid assumption of an uninitialised
	variable.
	(pam_mysql_get_host_info): new function.
	(pam_mysql_destroy_ctx): add missing xfree(ctx->config_file) to avoid
	leak.
	* configure.in: checks for netdb functions / IPv6 availability.
	* acinclude.m4: ditto.
	* README: add description about logrhostcolumn.
	* NEWS: note about logrhostcolumn.

2005-09-20  Moriyoshi Koizumi  <moriyoshi@users.sourceforge.net>

	* pam_mysql.c: prevent blocks obtained from pam_get_item() from being
	freed.
	(pam_mysql_check_passwd): do not escape the content of the "where" option.
	Fixes PR #1261484.
	(pam_mysql_sql_log): remove weird codes. Fixes PR #1256243.

2005-09-18  Moriyoshi Koizumi  <moriyoshi@users.sourceforge.net>

	* README: add a note about the issue regarding official MySQL binary
	packages.
	* NEWS: prepare for the release.